@@ -51,6 +51,9 @@ Producers
     + Fixed bug where only URL:s with . in them where recognized.
   o Image producer:
     + Added LENGTH parameter to allow for queueing with LOADBG AUTO.
+  o Layer producer:
+    + Fixed serious bug where a circular reference of layer producers caused a
+      stack overflow and server crash.
 
 Mixer
 -----
